-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0
-
None
-
ArchLinux x64
-
qtdeclarative/stable: 53371a557f791edc2d64c7b21cc1a5bab09afe90
Running the attached testcase in qmlscene leads to a segmentation fault, same happens if run using a QQmlApplicationEngine.
For Gerrit Dashboard: QTBUG-32711 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
61853,1 | QQuickListViewPrivate::updateStickySections(): add missing null check | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |