QQuickListViewPrivate::updateStickySections(): add missing null check

Task-number: QTBUG-32711
Change-Id: I45ed6829f2c240e8352dac33beeee803cb88a18d
Reviewed-by: Alan Alpert <aalpert@blackberry.com>